tests/unit/macho/x64/snapshots/unit__macho__x64__test_rpath__change_dylib_name@hello_with_rpath-2.snap
---
source: tests/unit/macho/x64/test_rpath.rs
expression: changed_macho.libs
---
[
    "self",
    "very_very_very_very_very_very_very_longid",
]
