tests/unit/macho/x64/snapshots/unit__macho__x64__test_rpath__change_dylib_name@ls-2.snap
---
source: tests/unit/macho/x64/test_rpath.rs
expression: changed_macho.libs
---
[
    "self",
    "/usr/lib/libncurses.5.4.dylib",
    "/usr/lib/libutil.dylib",
    "very_very_very_very_very_very_very_longid",
]
